--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,17 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background-blanc: #ffffff;
+  --foreground-noir: #171717;
+  --bleuazur: #64d9ce;
+  --bleugris: #c2dfed;
+  --vert: #70c29d;
+  --bleufoncé: #4fb2db;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  --color-background: var(--background-blanc);
+  --color-foreground: var(--foreground-noir);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
