--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,7 @@
 @theme inline {
   --color-background: var(--background-blanc);
   --color-foreground: var(--foreground-noir);
+  --vert: var(--vert);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
